2013-03-01  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_main_025.f90 (apply_scalar_source): if condensation
	occurs, give it the air temperature
	(update): set hydrodynamic evaporation if called for

	* temperature_source.f90 (temperature_source): add evaporate flag
	and code to read it
	(evaporation_rate): output is now in ft/s

2013-02-28  William A. Perkins  <william.perkins@pnnl.gov>

	* test/transport/pointsource2: test of scalar 'SOURCE' boundary
	condition 

	* block_bc_module.f90 (read_scalar_bcspecs): add a 'SOURCE'
	boundary condition
	(area_cell_check): routine to check indexes of 'IN' boundary
	condition 

	* scalars_module.f90 (scalars): add srcconc to block scalar
	variables 

2013-02-25  William A. Perkins  <william.perkins@pnnl.gov>

	* test/temperature/pond: specify specific heat as a time series

	* scalars_source.f90 (scalar_source_timestep): update specific
	heat time series

	* temperature_source.f90 (temperature_parse_options): allow the
	specific heat (domain-wide) to be specified as a time series

	* constants.f90 (constants): remove temperature related constants 

2011-11-17  William A. Perkins  <william.perkins@pnnl.gov>

	* gage_output_module.f90 (gage_file_setup_text): fix typo not
	liked by some compiler

2011-05-15  Perkins  <D3G096@ironhorse.pnl.gov>

	* util/cart_grid/Makefile.am: use $(OBJEXT) instead of .o so
	things work on Windoze

	* mass2.f90 (mass2): don't use the fptrap module anymore

	* Makefile.am : use $(OBJEXT) instead of .o so things work on
	Windoze

	* configure.in: use $(OBJEXT) instead of .o so things work on
	Windoze

2011-05-12  William A. Perkins  <william.perkins@pnl.gov>

	* plot_cgns.f90 (plot_cgns_setup): keep track of the blocks that
	have BCs and connections
	(plot_cgns_link_coord): don't link grid metrics; link BCs and
	connections only if needed
	(plot_cgns_write_bc): put donor points in output because you get
	stupid CGNS errors otherwise
