@@ -29,7 +29,7 @@ T F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial wat
 CDS 1.0 1.0			blend_uv, blend_time	! spatial and temporal differencing scheme blend factor for u/v
 0.0			uvel_initial	! initial uniform value of u velocity
 0.0			vvel_initial	! initial uniform value of v velocity
-1.0			conc_initial	! initial uniform value of concentration						
+0.0			conc_initial	! initial uniform value of concentration						
 6.0			wsel_or_depth_initial	! initial uniform value of depth OR water surface elv.
 0.0			uvel_wind	! uniform value of u wind velocity
 0.0			vvel_wind	! uniform value of v wind velocity
