@@ -1,3 +1,3 @@
 # $Id: background.dat 432 2001-11-29 18:17:02Z perk $
-01-01-1900 00:00:00     0.25 /
-01-01-2400 00:00:00     0.25 /
+01-01-1900 00:00:00     1.0 /
+01-01-2400 00:00:00     1.0 /
