@@ -1,3 +1,11 @@
+2013-03-04  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* block_bc_module.f90 (read_scalar_bcspecs): correct table count
+	when 'SOURCE' bc's are specified
+
+	* mass2_main_025.f90 (apply_scalar_bc): actually handle 'SOURCE'
+	bc's 
+
 2013-03-01  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* mass2_main_025.f90 (apply_scalar_source): if condensation
